Update auth api docs and define swagger annotations for the JobResource
